design bugs fixed

--- a/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.html
@@ -15,7 +15,7 @@
             <a data-bs-toggle="collapse" href="#collapse-level-1" aria-expanded="false"
                aria-controls="collapseExample">
                 <span class="link-title">{{'Container Menu' | translate}}</span>
-                <i class="link-icon"></i>
+                <i class="link-icon" aria-hidden="true"></i>
             </a>
             <div class="collapse" id="collapse-level-1">
                 <ul class="navigation-submenu py-0 px-2">
