--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,10 +3,10 @@
         <div class="d-inline header-navigation align-bottom m-auto">
             <a (click)="toggleSidebar()" class="nav-link navbar-link mt-2 ml-1 cursor-pointer header-menu-out pt-0"
                id="toggle-sidebar">
-                <i [ngClass]="isSidebarOpen ? 'fa-solid fa-xmark fa-2x' : 'fa-solid fa-bars'" class="fa-2x"></i>
+                <i [ngClass]="isSidebarOpen ? 'fa-solid fa-xmark fa-2x' : 'fa-solid fa-bars'" aria-hidden="true" class="fa-2x"></i>
             </a>
             <a class="nav-link navbar-link ms-4 cursor-pointer header-menu-out pt-0">
-                <img src="favicon.ico" alt="app logo" height="45">
+                <img src="favicon.ico" alt="app logo" class="app-icon">
             </a>
             <a [routerLink]="['dashboard']"
                class="nav-link custom-header-test d-xl-block d-lg-block d-md-block d-sm-none d-none "
