password request implemented

--- a/src/app/shared/components/login-management/components/password-request/password-request.component.html
+++ b/src/app/shared/components/login-management/components/password-request/password-request.component.html
@@ -8,7 +8,7 @@
     <button (click)="forgotPassword()" [disabled]="!passwordRequestForm.valid"
             class="btn btn-primary btn-block float-end"
             id="sign-in"
-            type="submit"> {{'signIn' | translate}} </button>
+            type="submit"> {{'send' | translate}} </button>
 </form>
 <div class="signup-link">
     <label (click)="goLoginPage()" class="cursor-pointer">
