--- a/src/app/shared/components/login-management/login-management.component.html
+++ b/src/app/shared/components/login-management/login-management.component.html
@@ -12,6 +12,7 @@
 
                 <!--import components to here-->
                 <app-login *ngIf="activeComponent === 'login'" class="width-100"></app-login>
+                <app-password-request *ngIf="activeComponent === 'password-request'" class="width-100"></app-password-request>
             </div>
             <div class="auth_footer">
                 <p class="text-muted text-center">
